--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'Z'
 - !lcsh 'American Library Association'
 - !lcsh 'Library science -- Congresses'
+- GITenberg
 title: "Papers and Proceedings of the Thirty-Fourth Annual Meeting of the American\
   \ Library Association\r\nHeld at Ottawa, Canada, June 26-July 2, 1912"
 url: http://www.gutenberg.org/ebooks/45756
